--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,5 @@
-{{partial 'navbar'}}
+<nav class="navbar navbar-default navbar-clear">
+  {{partial 'navbar'}}
+</nav>
 {{partial 'banner'}}
 {{partial 'services'}}
