--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default">
+
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,8 +14,7 @@
         <li>{{#link-to 'index'}}How does it work?{{/link-to}}</li>
         <li>{{#link-to 'index'}}Browse Students{{/link-to}}</li>
         <li>{{#link-to 'index'}}Browse Mentors{{/link-to}}</li>
-        <li>{{#link-to 'index'}}Sign up{{/link-to}}</li>
+        <li>{{#link-to 'sign-up'}}Sign up{{/link-to}}</li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
