--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,17 +22,16 @@ body {
   letter-spacing: 3px;
   font-family: 'Raleway', sans-serif;
   size: 4px;
-  text-shadow: 2px 2px 20px #000;
+  text-shadow: 2px 2px 10px #000;
+  & > span {
+    color: $turing-blue;
+    letter-spacing: 3px;
+    font-weight: 700;
+  }
 }
 
 .navbar-opaque {
   background-color: rgba(30 , 30, 30, 1);
-}
-
-.navbar-brand > span {
-  color: #05c2d1;
-  letter-spacing: 3px;
-  font-weight: 700;
 }
 
 .banner-image {
@@ -53,13 +52,12 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 48px;
   padding-top: 300px;
-}
-
-.banner-text > div {
-  font-size: 20px;
-  text-shadow: 2px 2px 20px #05c2d1;
-  text-transform: uppercase;
-  margin-top: -5px;
+  & > div {
+    font-size: 20px;
+    text-shadow: 2px 2px 20px $turing-blue;
+    text-transform: uppercase;
+    margin-top: -5px;
+  }
 }
 
 .services-container {
@@ -75,38 +73,68 @@ i {
   padding: 18px;
   border-radius: 50%;
   margin-bottom: 30px;
-}
-
-i.first {
-  background-color: #05c2d1;
-  color: white;
-}
-
-i.second {
-  background-color: #05c2d1;
-  color: white;
-}
-
-i.third {
-  background-color: #05c2d1;
-  color: white;
+  &.first {
+    background-color: $turing-blue;
+    color: white;
+  }
+  &.second {
+    background-color: $turing-blue;
+    color: white;
+  }
+  &.third {
+    background-color: $turing-blue;
+    color: white;
+  }
 }
 
 .services-header {
   font-family: 'Raleway', sans-serif;
   font-size: 64px;
-}
-
-.services-header > div {
-  font-family: 'Dancing Script', cursive;
-  font-weight: bold;
-  font-size: 28px;
-  color: #777;
-  margin-top: -15px;
-  padding-bottom: 40px;
-  font-style: italic;
+  & > div {
+    font-family: 'Dancing Script', cursive;
+    font-weight: bold;
+    font-size: 28px;
+    color: #777;
+    margin-top: -15px;
+    padding-bottom: 40px;
+    font-style: italic;
+  }
 }
 
 .services-description {
   color: #888;
+}
+
+.sign-up-section {
+  text-align: center;
+  & > span {
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: uppercase;
+    &.muted-text {
+      font-size: 16px;
+      color: #888;
+      // text-transform: none;
+      font-weight: 200;
+    }
+  }
+}
+
+i.fa.fa-github-square {
+  margin: 0;
+  padding: 0;
+  height: 25px;
+}
+
+.btn-turing {
+  background-color: $turing-blue;
+  color: white;
+  &:hover {
+    color: white;
+    background-color: black;
+  }
+  &:active{
+    color: $turing-blue;
+    background-color: black;
+  }
 }
