--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -2,12 +2,12 @@
   {{partial 'navbar'}}
 </nav>
 <div class="container">
-  <div class="well">
-    <div class="col-md-6 sign-up-blurb">
-      <div>SIGN UP TODAY!</div>
-    </div>
-    <div class="col-md-6">
-      HERE IS THE SIGN UP AREA!
+  <div class="row">
+    <div class="well col-md-6 col-md-offset-3 sign-up-section">
+      <span class="primary">Sign-up with your Github Account Today!</span>
+      <span class="muted-text">Something less important goes here.</span>
+      <hr>
+      <button class="btn btn-turing btn-lg github-signup"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></button>
     </div>
 
   </div>
