start consuming api

--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li>{{#link-to 'index'}}How does it work?{{/link-to}}</li>
         <li>{{#link-to 'index'}}Browse Students{{/link-to}}</li>
-        <li>{{#link-to 'index'}}Browse Mentors{{/link-to}}</li>
+        <li>{{#link-to 'mentors'}}Browse Mentors{{/link-to}}</li>
         <li>{{#link-to 'sign-up'}}Sign up{{/link-to}}</li>
       </ul>
     </div><!-- /.navbar-collapse -->
