start show page

--- a/app/templates/mentors.hbs
+++ b/app/templates/mentors.hbs
@@ -2,7 +2,6 @@
   {{partial 'navbar'}}
 </nav>
 
-
 <div class="container">
   <section class="page-header">
     <h1>MENTORS</h1>
@@ -21,7 +20,7 @@
           <h4 class="list-group-item-heading">Timezone: {{mentor.timezone}}</h4>
         </li>
         <li class="list-group-item">
-          <p class="list-group-item-text"><a href="#">View details about {{mentor.name}}</a></p>
+          <p class="list-group-item-text"><a href="#">View details about {{#link-to 'mentor' mentor}}{{mentor.name}}{{/link-to}}</a></p>
         </li>
       </ul>
     </div>
