--- a/app/templates/student.hbs
+++ b/app/templates/student.hbs
@@ -13,8 +13,7 @@
         Email Address: {{model.email}}<br />
         Phone Number: {{model.phone_number}}<br />
         Slack: {{model.slack_username}}<br />
-        Location : {{model.location}} / {{model.timezone}}<br />
-        Bio: {{model.bio}}<br />
+        Cohort : {{model.cohort}}<br />
       </div>
     </div>
   </div>
