--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>{{#link-to 'index'}}How does it work?{{/link-to}}</li>
-        <li>{{#link-to 'index'}}Browse Students{{/link-to}}</li>
+        <li>{{#link-to 'students'}}Browse Students{{/link-to}}</li>
         <li>{{#link-to 'mentors'}}Browse Mentors{{/link-to}}</li>
         <li>{{#link-to 'sign-up'}}Sign up{{/link-to}}</li>
       </ul>
