--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -1,17 +1,13 @@
-
-
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       {{#link-to 'index' class="navbar-brand"}}
         MENTOR<span>SHIP</span>
       {{/link-to}}
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li>{{#link-to 'index'}}How does it work?{{/link-to}}</li>
+        <li>{{#link-to 'how'}}How does it work?{{/link-to}}</li>
         <li>{{#link-to 'students'}}Browse Students{{/link-to}}</li>
         <li>{{#link-to 'mentors'}}Browse Mentors{{/link-to}}</li>
         <li>{{#link-to 'sign-up'}}Sign up{{/link-to}}</li>
