--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -3,7 +3,8 @@
     <div class="col-md-12 services-header">
       SERVICES
       <div>
-        These are the things we do.
+        These be th' thin's we do.
+        {{!-- These are the things we do. --}}
       </div>
     </div>
   </div>
