--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -7,7 +7,7 @@
       <span class="primary">Sign-up with your Github Account Today!</span>
       <span class="muted-text">Something less important goes here.</span>
       <hr>
-      <button class="btn btn-turing btn-lg github-signup"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></button>
+      <a href="http://localhost:3000/auth/github" class="btn btn-turing btn-lg github-signup"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
     </div>
 
   </div>
