Hard code the routes to the backend

--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -11,7 +11,7 @@
         {{#if (getCookie 'authenticated')}}
         <li>{{#link-to 'students'}}Students{{/link-to}}</li>
         <li>{{#link-to 'mentors'}}Mentors{{/link-to}}</li>
-        <li><a href="http://localhost:3000/sign_out">Sign Out</a></li>
+        <li><a href="http://http://mentorship-turing-backend.herokuapp.com/sign_out">Sign Out</a></li>
         {{else}}
         <li>{{#link-to 'sign-up'}}Sign Up{{/link-to}}</li>
         {{/if}}
