Link path correction

--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -6,7 +6,7 @@
     <div class="well col-md-6 col-md-offset-3 sign-up-section">
       <span class="primary">Sign-up with your Github Account Today!</span>
       <hr>
-      <a href="http://http://mentorship-turing-backend.herokuapp.com/start_auth" class="btn btn-turing btn-lg github-signup"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+      <a href="http://mentorship-turing-backend.herokuapp.com/start_auth" class="btn btn-turing btn-lg github-signup"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
     </div>
 
   </div>
